src/objects/Set_Time_solution__c.object
<CustomObject>
    <fields>
        <fullName>Band__c</fullName>
        <label>Band</label>
        <referenceTo>Band_solution__c</referenceTo>
        <relationshipLabel>Set Times (solution)</relationshipLabel>
        <relationshipName>Set_Times_solution</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <referenceTo>Stage_solution__c</referenceTo>
        <relationshipLabel>Set Times (solution)</relationshipLabel>
        <relationshipName>Set_Times_solution</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00pm</fullName>
                </value>
                <value>
                    <fullName>1:30pm</fullName>
                </value>
                <value>
                    <fullName>3:00pm</fullName>
                </value>
                <value>
                    <fullName>4:30pm</fullName>
                </value>
                <value>
                    <fullName>6:00pm</fullName>
                </value>
                <value>
                    <fullName>7:30pm</fullName>
                </value>
                <value>
                    <fullName>9:00pm</fullName>
                </value>
                <value>
                    <fullName>10:30pm</fullName>
                </value>
                <value>
                    <fullName>12:00am</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Set Time (solution)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Set Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Set Times (solution)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>